--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -2,8 +2,17 @@
   @apply block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400;
 }
 
-.input {
-  @apply block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+.inputBase {
+  @apply block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border  dark:bg-gray-700  dark:placeholder-gray-400 dark:text-white;
+}
+
+.inputNormal {
+  @apply border-gray-300 focus:ring-blue-500 focus:border-blue-500  dark:border-gray-600 dark:focus:ring-blue-500 dark:focus:border-blue-500;
+
+}
+
+.inputError {
+  @apply border-red-300 focus:ring-red-400 focus:border-red-400 dark:border-red-500 dark:focus:ring-red-400 dark:focus:border-red-400;
 }
 
 .error {
